@@ -68,12 +68,14 @@ function update_preferences($pref_id=0) {
 			default:
 			break;
 		}
+
 		/* Run the update for this preference only if it's set */
 		if (isset($_REQUEST[$name])) {
 			Preference::update($id,$pref_id,$value,$_REQUEST[$apply_to_all]);
-			if (Access::check('interface','100') AND $_REQUEST[$new_level]) {
-				Preference::update_level($id,$_REQUEST[$new_level]);
-			}
+		}
+
+		if (Access::check('interface','100') AND $_REQUEST[$new_level]) {
+			Preference::update_level($id,$_REQUEST[$new_level]);
 		}
 
 	} // end foreach preferences
