@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.6-Alpha1
+        - Fixed setting access levels for plugin passwords
         - Fixed handling of unusual characters in passwords
         - Fixed support for requesting different thumbnail sizes
 	- Added ability to rate Albums of the Moment
